force-app/main/default/objects/Postal_Code__c/Postal_Code__c.object-meta.xml
<CustomObject>
    <label>Postal Code</label>
    <nameField>
        <label>Postal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>