force-app/main/default/objects/Postal_Code__c/fields/ADA_DB_R__c.field-meta.xml
<CustomField>
    <fullName>ADA_DB_R__c</fullName>
    <formula>Director_DB_R__r.ADA__r.FirstName + &quot; &quot; + Director_DB_R__r.ADA__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADA - DB&amp;R</label>
    <type>Text</type>
</CustomField>