force-app/main/default/objects/Postal_Code__c/fields/BDE_DB_R__c.field-meta.xml
<CustomField>
    <fullName>BDE_DB_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDE - DB&amp;R</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Postal_Codes7</relationshipName>
    <type>Lookup</type>
</CustomField>