force-app/main/default/objects/Postal_Code__c/fields/Director_DB_R__c.field-meta.xml
<CustomField>
    <fullName>Director_DB_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director - DB&amp;R</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Postal_Codes9</relationshipName>
    <type>Lookup</type>
</CustomField>