force-app/main/default/objects/Postal_Code__c/fields/Director_Physical__c.field-meta.xml
<CustomField>
    <fullName>Director_Physical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director - Physical</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Postal_Codes8</relationshipName>
    <type>Lookup</type>
</CustomField>