force-app/main/default/objects/Postal_Code__c/fields/Shred_Zone__c.field-meta.xml
<CustomField>
    <fullName>Shred_Zone__c</fullName>
    <label>Shred Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>