force-app/main/default/objects/Postal_Code__c/fields/SMB_Rep__c.field-meta.xml
<CustomField>
    <fullName>SMB_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMB Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Postal_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>