force-app/main/default/objects/Postal_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State_Province__c</columns>
    <columns>State_Province_Abbreviation__c</columns>
    <columns>Country__c</columns>
    <columns>Director_Physical__c</columns>
    <columns>BDE_Physical__c</columns>
    <columns>ADA_Physical__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>